<resources>
    <string name="app_name">Ashbab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Facebook Login Items -->
    <string name="facebook_application_id" translatable="false">2613192082046547</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb2613192082046547</string>

    <!-- Actionbar Items -->
    <string name="text_action_sign_out">Sign Out</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Find your Product</string>

    <!-- Navigation Header -->
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">ashbab.bd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Drawer Items -->
    <string name="category_profile">Profile</string>
    <string name="category_title">Categories</string>
    <string name="category_chair">Chair</string>
    <string name="category_table">Table</string>

    <!-- Home content -->
    <string name="title_newly_added">Newly Added</string>
    <string name="text_loading_failed">Failed to load Data\nCheck your internet connection</string>
    <string name="text_signed_in">Signed in Successfully</string>
    <string name="text_sign_in_cancelled">Sign-in Cancelled</string>

    <!-- Product Details Content -->
    <string name="taka_sign"> ৳ </string>
    <string name="title_description">Product Description</string>
    <string name="title_category">Category: </string>
    <string name="fab_buy">Buy Product</string>
    <string name="order_placed">Order Placed Successfully</string>
    <string name="text_address_missing">We do not know where you live!\n
                                        Please go to your profile page to add your address</string>

    <!-- User Profile Content -->
    <string name="fab_save">Save</string>
    <string name="text_name">Name</string>
    <string name="text_name_hint">John Snow</string>
    <string name="text_address">Address</string>
    <string name="text_address_hint">North South University, Bashundhara R/A</string>
    <string name="text_email">Email</string>

    <!-- Search Results Content -->
    <string name="title_search_results"> Search Results </string>

    <!-- User Profile Content -->
    <string name="text_profile_saved">Profile Updated Successfully</string>
    <string name="text_profile_save_failed">Profile Update Failed</string>

    <!-- Default Values -->
    <string name="default_home_card_name">Sample Chair</string>
    <string name="default_home_card_price">1250.50</string>
    <string name="default_email">example@ashbab.com</string>
    <string name="default_category_tag">Chair</string>
    <string name="default_description">Comfy and lightweight so it’s easy to move. The castors have a handy brake mechanism that keeps the chair in place when you stand up, and releases when you sit down. Adjust the height and angle of this chair so your work day feels comfortable. The mesh backrest lets air through so you keep cool even when the workload rises. Built to outlast years of ups and downs.</string>

</resources>
