<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppText.Body1"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:padding="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextAppearance.AppText.Body1"
            android:id="@+id/user_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_name_hint"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:background="@color/color_transparent"
            tools:ignore="Autofill" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppText.Body1"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:padding="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextAppearance.AppText.Body1"
            android:id="@+id/user_address_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_address_hint"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:background="@color/color_transparent"
            tools:ignore="Autofill" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppText.Body1"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:padding="20dp"/>

        <TextView
            style="@style/TextAppearance.AppText.Body1"
            android:id="@+id/user_email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/default_email"
            android:layout_gravity="center"
            tools:ignore="Autofill" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>