<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:id="@+id/card_view_main"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_main_width"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_weight="1"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="@dimen/card_search_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image_view_search"
            android:layout_width="@dimen/card_search_image_width"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextAppearance.AppText.Card1"
            android:id="@+id/product_text_view_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/product_image_view_search"
            android:text="@string/default_home_card_name" />

        <TextView
            style="@style/TextAppearance.AppText.Card2"
            android:id="@+id/taka_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/vertical_spacing"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/product_image_view_search"
            android:layout_below="@+id/product_text_view_search"
            android:text="@string/taka_sign" />

        <TextView
            style="@style/TextAppearance.AppText.Card2"
            android:id="@+id/price_text_view_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/vertical_spacing"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/taka_search"
            android:layout_below="@+id/product_text_view_search"
            android:text="@string/default_home_card_price" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>