<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="@dimen/card_main_width"
    android:layout_height="@dimen/card_main_height"
    android:layout_marginStart="@dimen/vertical_spacing"
    android:layout_marginTop="@dimen/horizontal_spacing"
    android:layout_weight="1"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="@dimen/card_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image_view_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/product_text_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/vertical_spacing"
            android:paddingEnd="@dimen/vertical_spacing"
            android:text="@string/default_home_card_name"
            android:textSize="@dimen/card_text_size"
            android:textColor="@android:color/black"
            android:fontFamily="@font/oswald_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/vertical_spacing"
            android:paddingEnd="@dimen/vertical_spacing">

            <TextView
                android:id="@+id/takaID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/vertical_spacing"
                android:paddingEnd="@dimen/vertical_spacing"
                android:text="@string/taka_sign"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:fontFamily="@font/oswald_semi_bold" />

            <TextView
                android:id="@+id/price_text_view_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/vertical_spacing"
                android:paddingEnd="@dimen/vertical_spacing"
                android:text="@string/default_home_card_price"
                android:textSize="@dimen/card_text_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/oswald_semi_bold" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>